# openfuelservice

./: .dockerignore  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose-debug.yml  docker-compose.override.yml  docker-compose.yml  gunicorn_config.py  manage.py  ofs_settings_docker.yml  requirements.txt
.github/workflows/: backend_testing.yml
backend/: .dockerignore  .flake8  .gitignore  Dockerfile  Readme.md  alembic.ini  backend.dockerfile  celeryworker.dockerfile  debug.env  debug_runner.py  github.env  mypy.ini  prestart.sh  pyproject.toml  start-backend.sh  start-worker.sh  tests-start.sh  tox.ini
backend/alembic/: env.py
backend/alembic/versions/: 08433c1cee9b_add_wikipedia_base_models.py  209d1b0b14b6_add_cfd_model.py  26aae37a85d5_add_eurostat_models.py  2d452d848bbd_base_models.py  331682c0c36b_base_models.py  387742d55298_initial_base_revision.py  4f1c5d7ab359_base_models.py  5bba75e809d1_base_models.py  73883d2da3d5_add_wikipedia_and_carfueldata_models.py  7af6479f469b_update_to_integer.py  7bc5a1bb4a28_base_models.py  8feb2c432622_add_carfueldata_models.py  936918094389_add_envirocar_models.py  c046ada60cd8_base_models.py  cf9d3ee08572_base_models.py  d4867f3a4c0a_first_revision.py  dbb36fb8d545_base_models.py  eace2cca185d_base_models.py  eae72682f940_add_country_data_models.py  f6bfb850a4f7_base_models.py
backend/app/: main.py  utils.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: brands.py  cars.py  categories.py  fuel.py  login.py  users.py
backend/app/categories/: fixed_matches.yml
backend/app/core/: __init__.py  celery_app.py  config.py
backend/app/crud/: __init__.py  base.py  crud_envirocar_phenomenon.py  crud_envirocar_sensor.py  crud_envirocar_sensor_statistic.py  crud_envirocar_track.py  crud_envirocar_track_measurement.py  crud_item.py  crud_user.py
backend/app/db/: base.py  base_class.py  import_data.py  init_db.py  session.py
backend/app/db/importer/: base_importer.py  base_reader.py  mappings.py
backend/app/db/importer/carfueldata/: carfueldata_reader.py  cfd_importer.py  cfd_objects.py  cfd_reader.py
backend/app/db/importer/countries/: countries_reader.py
backend/app/db/importer/envirocar/: envirocar_reader.py
backend/app/db/importer/fuelprices/: eurostat_reader.py
backend/app/db/importer/wikipedia/: wikipedia_reader.py
backend/app/files/: car_brands.yml
backend/app/files/countrydata/: country_codes.csv
backend/app/files/envirocar/: test_envircoar_phenomenons.json  test_envirocar_sensor_id_response.json  test_envirocar_sensors_response.json  test_envirocar_sensors_statistics_response.json  test_envirocar_track_id_response.json  test_envirocar_track_measurements_response.json  test_envirocar_tracks_response.json
backend/app/files/internal/: car_brands.yml  fixed_matches.json
backend/app/files/openrouteservice/: openrouteservice_example_request_heidelberg.json
backend/app/files/wikipedia/: test_category_microcars_info_response.json  test_category_microcars_response.json  test_kategorie_kleinstwagen_info_response.json  test_kategorie_kleinstwagen_response.json  test_kategorie_leichtfahrzeug_info_response.json  test_kategorie_leichtfahrzeug_response.json
backend/app/fuel_calculations/: base_fuel_calculator.py  carfueldata_fuel_calculator.py  category_fuel_calculator.py  envirocar_fuel_calculator.py  fuel_model.py
backend/app/matching/: base_matcher.py  envirocar_matcher.py  manufacturer_matching.py
backend/app/misc/: data_handling.py  file_management.py  geometry_handling.py  json_decoders.py  json_encoders.py  requests_tools.py
backend/app/models/: __init__.py  carfueldata.py  countrydata.py  envirocar.py  eurostat.py  misc.py  wikipedia.py
backend/app/schemas/: __init__.py  brand.py  car.py  carfueldata_car.py  category.py  envirocar_phenomenon.py  envirocar_sensor.py  envirocar_sensor_statistic.py  fuel.py  geometry_objects.py  prices.py  schema_base.py  sensor.py  track.py  track_measurement.py
backend/app/tests/: conftest.py
backend/app/tests/api/api_v1/: coverage.xml  test_brands.py  test_cars.py  test_categories.py  test_fuel.py  test_login.py  test_users.py
backend/app/tests/crud/: test_item.py  test_user.py
backend/app/tests/db/: test_base_class.py  test_import_data.py  test_mappings.py
backend/app/tests/db/importer/: test_base_importer.py  test_mappings.py
backend/app/tests/db/importer/carfueldata/: test_carfueldata_importer.py  test_carfueldata_reader.py  test_cfd_importer.py  test_cfd_reader.py
backend/app/tests/db/importer/countries/: test_countries_importer.py  test_countries_reader.py
backend/app/tests/db/importer/envirocar/: test_envirocar_importer.py  test_envirocar_reader.py
backend/app/tests/db/importer/fuelprices/: test_eurostat_importer.py  test_eurostat_reader.py
backend/app/tests/fuel_calculations/: test_base_fuel_calculator.py  test_carfueldata_fuel_calculator.py  test_envirocar_fuel_calculator.py  test_fuel_model.py
backend/app/tests/matcher/: test_base_matcher.py  test_envirocar_matcher.py
backend/app/tests/misc/: test_data_handling.py  test_filemanagement.py  test_geometry_handling.py  test_json_decoders.py  test_json_encoders.py  test_manufacturer_matching.py  test_requests_tools.py
backend/app/tests/models/: test_envirocar.py
backend/app/tests/pytest_alembic/: test_migrations.py
backend/app/tests/schemas/: test_geometry_objects.py
backend/app/tests/utils/: carfueldata.py  envirocar.py  utils.py
(+364 files in other folders)
