[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
inboard = { version = "^0.13.0", extras = ["fastapi"] }
python-multipart = "^0.0.5"
email-validator = "^1.0.5"
requests = "^2.23.0"
celery = "^4.4.2"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
emails = "^0.5.15"
raven = "^6.10.0"
jinja2 = "^2.11.2"
alembic = "^1.4.2"
sqlalchemy = {extras = ["postgresql_psycopg2binary"], version = "~1.3"}
pytest = "^5.4.1"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
python-dotenv = "^0.19.2"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^19.10b0"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^5.4.1"
sqlalchemy-stubs = "^0.3"
pytest-cov = "^2.8.1"
tox = "^3.24.4"
pytest-random-order = "^1.0.4"
tox-docker = "^3.1.0"
docker = "^5.0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.extras]
lint = ["mypy", "black", "isort", "flake8"]
tox = ["tox"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.coverage
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
