[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Julian Psotta <julianpsotta@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
inboard = { version = "^0.13.0", extras = ["fastapi"] }
python-multipart = "^0.0.5"
email-validator = "^1.1.3"
requests = "^2.27.1"
celery = "^5.2.3"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
tenacity = "^6.3.1"
emails = "^0.6"
raven = "^6.10.0"
jinja2 = "^2.11.3"
alembic = "^1.7.6"
sqlalchemy = { extras = ["postgresql_psycopg2binary"], version = "~1.3.24" }
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
python-dotenv = "^0.19.2"
kombu = "^5.2.3"
GeoAlchemy2 = "^0.9.4"
tqdm = "^4.62.3"
types-requests = "^2.27.10"
types-PyYAML = "^6.0.4"
pyshp = "^2.2.0"
Shapely = "^1.8.1"
pandas = "^1.4.1"
openpyxl = "^3.0.9"
pylightxl = "^1.58"
geojson = "^2.5.0"
tqdm-multiprocess = "^0.0.11"
requests-mock = "^1.9.3"
requests-toolbelt = "^0.9.1"
responses = "^0.17.0"
Wikipedia-API = "^0.5.4"
nltk = "^3.7"
numpy = "^1.22.2"
tflearn = "^0.5.0"
tensorflow = "^2.8.0"
pytest-asyncio = "^0.18.1"
pytest-trio = "^0.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
black = "^22.1.0"
isort = "^5.10.1"
autoflake = "^1.4"
flake8 = "^4.0.1"
pytest = "^7.0.1"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^3.0.0"
tox = "^3.24.5"
pytest-random-order = "^1.0.4"
tox-docker = "^3.1.0"
safety = "^1.10.3"
pytest-alembic = "^0.8.0"
pytest-mock-resources = "^2.2.0"
pre-commit = "^2.17.0"
httpx = "^0.22.0"
trio = "^0.19.0"
docker = "^5.0.3"
poetryup = "^0.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["app/tests"]

[tool.poetry.plugins.pytest11]
pytest_alembic = "pytest_alembic.plugin"

[tool.poetry.extras]
lint = ["mypy", "black", "isort", "flake8"]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88


[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.coverage
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
